# ani2xcur-gui

./: .gitignore  CODE_WIKI.md  README.md  pyproject.toml  todo.md
.github/workflows/: build.yml  lint.yml  pytest.yml
ani2xcur/: __main__.py  cmd.py  config.py  downloader.py  logger.py  smart_finder.py  updater.py  utils.py  version.py
ani2xcur/cli/: app.py  cli.py  convert.py  cursor.py  image_magick.py  system.py
ani2xcur/config_parse/: linux.py  parse.py  win.py
ani2xcur/cursor_conversion/: convert.py  win2xcur_warp.py
ani2xcur/cursor_conversion/native_cursor/: __init__.py  models.py  parsers.py  process.py  transforms.py  writers.py
ani2xcur/file_operations/: archive_manager.py  file_manager.py
ani2xcur/gui/: __init__.py  app.py  main_window.py
ani2xcur/gui/models/: __init__.py  conversion_options.py  cursor_info.py
ani2xcur/gui/presenters/: __init__.py  base_presenter.py  convert_presenter.py  main_presenter.py  manage_presenter.py
ani2xcur/gui/themes/: dark.qss  light.qss
ani2xcur/gui/utils/: __init__.py  theme_manager.py  threading.py
ani2xcur/gui/views/: __init__.py  convert_page.py  log_viewer.py  (+4 more)
ani2xcur/manager/: base.py  image_magick_manager.py  linux_cur_manager.py  regedit.py  win_cur_manager.py  win_env_val_manager.py
tests/: conftest.py  test_cli_convert_samples.py  test_cli_cursor_install.py  test_cli_debug.py  test_cmd_logging.py  test_cursor_conversion_samples.py  test_cursor_manager_samples.py  test_cursor_sample_finder_archive.py  test_cursor_sample_parsing.py  test_file_manager.py  test_kde_config.py  test_linux_cursor_config.py  test_lxqt_config.py  test_mate_config.py  test_native_cursor_converter.py  test_wayland_cursor_loader.py  test_windows_cursor_size.py  test_x_cursor_config.py  test_xfce_config.py
tests/DMZ-White-Windows/: AppStarting.ani  Arrow.cur  AutoSetup.inf  Crosshair.cur  Hand.cur  Help.cur  IBeam.cur  NWPen.cur  No.cur  Person.cur  Pin.cur  SizeAll.cur  SizeNESW.cur  SizeNS.cur  SizeNWSE.cur  SizeWE.cur  UpArrow.cur  Wait.ani
tests/DMZ-White-X11/: cursor.theme
tests/Hiiro-Windows/: AutoSetup.inf  不可用.ani  位置.cur  候选.cur  垂直调整.cur  对角线1.cur  对角线2.cur  帮助选择.ani  手写.cur  水平调整.cur  移动.cur  精确选择.cur  联系人.cur  选定文本.cur
tests/Sunaokami-Shiroko-Windows/: Right-click to install.inf  alternate.ani  busy.ani  cross.ani  dgn1.ani  dgn2.ani  hand.cur  help.ani  horz.ani  link.ani  move.ani  pointer.ani  text.ani  unavailiable.ani  vert.ani  work.ani
tests/tools/: verify_wayland_cursor.c
(+16 files in other folders)
