[build-system]
requires = ["setuptools", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ani2xcur"
description = "一个功能强大的命令行工具，用于在 Windows 和 Linux 平台上发现、转换、安装和管理鼠标指针主题。它支持双向转换，可将 Linux 光标主题 (XCursor) 转为 Windows 格式 (.cur/.ani)，亦可将 Windows 主题转为 Linux 格式，并提供安装、应用和卸载鼠标主题的全套管理功能。"
requires-python = ">=3.10"
readme = { content-type = "text/markdown", file = "README.md" }
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [ {name = "licyk"} ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
]
dependencies = [
    "Pillow>=10.0",
    "typer>=0.26.7",
    "zstandard",
    "py7zr",
    "rarfile",
    "requests",
    "tqdm",
    "rich",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
"ani2xcur" = "ani2xcur.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ani2xcur*"]
exclude = ["tests*", "docs*", "*__pycache__*", "*.pyc", "*.pyo", "*.pyd", ".git*", "__pycache__"]
namespaces = true

[tool.setuptools.package-data]
"ani2xcur" = ["source/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo", "*.pyd", ".git*", ".github*", "tests*", "docs*"]

[tool.setuptools.dynamic]
version = { attr = "ani2xcur.version.VERSION" }

[tool.pylint]
disable = [
    "missing-timeout",
    "too-many-lines",
    "import-outside-toplevel",
    "broad-exception-caught",
    "broad-exception-raised",
    "subprocess-run-check",
    "keyword-arg-before-vararg",
    "fixme"
]

[tool.pylint.format]
max-line-length = 180
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"

[tool.ruff]
line-length = 180
indent-width = 4
lint.ignore = [
    "E402" # module-import-not-at-top-of-file
]

[tool.pytest.ini_options]
markers = [
    "integration: 真实样本转换烟雾测试",
    "wayland: 需要 headless Weston 和 libwayland-cursor 的集成测试",
]
